gcc/testsuite/algol68/compile/error-radix-5.a68
(bits d = 1r0; skip) { dg-error "invalid radix" }
